--- a/css/main.css
+++ b/css/main.css
@@ -381,55 +381,29 @@ ul {
           flex-direction: column;
 }
 
-.modal-form-container__input--name {
-  position: relative;
-}
-
-.modal-form__icon--name {
-  position: absolute;
-  top: 16px;
-  left: 14px;
-  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-form__input:focus + .modal-form__icon--name,
-.modal-form__input:hover + .modal-form__icon--name {
-  fill: var(--text-link-selection);
-}
-
+.modal-form-container__input--name,
+.modal-form-container__input--mail,
 .modal-form-container__input--tel {
   position: relative;
 }
 
-.modal-form__icon--tel {
-  position: absolute;
-  top: 16px;
-  left: 14px;
-  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
+.modal-form__input:focus + .modal-form__icon--name,
+.modal-form__input:hover + .modal-form__icon--name,
 .modal-form__input:focus + .modal-form__icon--tel,
-.modal-form__input:hover + .modal-form__icon--tel {
+.modal-form__input:hover + .modal-form__icon--tel,
+.modal-form__input:focus + .modal-form__icon--mail,
+.modal-form__input:hover + .modal-form__icon--mail {
   fill: var(--text-link-selection);
 }
 
-.modal-form-container__input--mail {
-  position: relative;
-}
-
+.modal-form__icon--name,
+.modal-form__icon--tel,
 .modal-form__icon--mail {
   position: absolute;
   top: 16px;
   left: 14px;
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-form__input:focus + .modal-form__icon--mail,
-.modal-form__input:hover + .modal-form__icon--mail {
-  fill: var(--text-link-selection);
 }
 
 .modal-form__input--name,
@@ -450,8 +424,7 @@ ul {
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-form__input:focus,
-.modal-form__input:hover {
+.modal-form__input:focus, .modal-form__input:hover {
   border: 1px solid #2196f3;
   outline: none;
 }
@@ -495,7 +468,7 @@ ul {
 }
 
 .modal-form__checkbox:focus + .modal-form__label--policy::before {
-  outline: 2px solid var(--button);
+  outline: 1px solid var(--button);
 }
 
 .modal-form__checkbox:checked + .modal-form__label--policy::before {
@@ -567,8 +540,7 @@ ul {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal__button--submit:hover,
-.modal__button--submit:focus {
+.modal__button--submit:hover, .modal__button--submit:focus {
   background-color: #188ce8;
 }
 
