--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -12,44 +12,28 @@
   display: flex;
   flex-direction: column;
 }
-.modal-form-container__input--name {
-  position: relative;
-}
-.modal-form__icon--name {
-  position: absolute;
-  top: 16px;
-  left: 14px;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal-form__input:focus + .modal-form__icon--name,
-.modal-form__input:hover + .modal-form__icon--name {
-  fill: var(--text-link-selection);
-}
+.modal-form-container__input--name,
+.modal-form-container__input--mail,
 .modal-form-container__input--tel {
   position: relative;
 }
-.modal-form__icon--tel {
-  position: absolute;
-  top: 16px;
-  left: 14px;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+
+.modal-form__input:focus + .modal-form__icon--name,
+.modal-form__input:hover + .modal-form__icon--name,
 .modal-form__input:focus + .modal-form__icon--tel,
-.modal-form__input:hover + .modal-form__icon--tel {
+.modal-form__input:hover + .modal-form__icon--tel,
+.modal-form__input:focus + .modal-form__icon--mail,
+.modal-form__input:hover + .modal-form__icon--mail {
   fill: var(--text-link-selection);
 }
-.modal-form-container__input--mail {
-  position: relative;
-}
+
+.modal-form__icon--name,
+.modal-form__icon--tel,
 .modal-form__icon--mail {
   position: absolute;
   top: 16px;
   left: 14px;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal-form__input:focus + .modal-form__icon--mail,
-.modal-form__input:hover + .modal-form__icon--mail {
-  fill: var(--text-link-selection);
 }
 
 .modal-form__input--name,
@@ -66,12 +50,12 @@
 .modal-form__input {
   cursor: pointer;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.modal-form__input:focus,
-.modal-form__input:hover {
-  border: 1px solid #2196f3;
-  outline: none;
+  &:focus,
+  &:hover {
+    border: 1px solid #2196f3;
+    outline: none;
+  }
 }
 
 .modal-form__label {
@@ -86,17 +70,18 @@
   display: inline-flex;
   align-items: center;
   justify-content: center;
-}
-.modal-form__label--policy::before {
-  content: '';
-  display: inline-block;
-  width: 16px;
-  height: 15px;
-  background-image: url(../images/checkbox-empty.svg);
-  margin-right: 7px;
-  cursor: pointer;
-  transition: background-image 50ms cubic-bezier(0.4, 0, 0.2, 1),
-    border-radius 50ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &::before {
+    content: '';
+    display: inline-block;
+    width: 16px;
+    height: 15px;
+    background-image: url(../images/checkbox-empty.svg);
+    margin-right: 7px;
+    cursor: pointer;
+    transition: background-image 50ms cubic-bezier(0.4, 0, 0.2, 1),
+      border-radius 50ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
 
 .modal-form__checkbox {
@@ -105,7 +90,7 @@
   appearance: none;
 }
 .modal-form__checkbox:focus + .modal-form__label--policy::before {
-  outline: 2px solid var(--button);
+  outline: 1px solid var(--button);
 }
 .modal-form__checkbox:checked + .modal-form__label--policy::before {
   background-image: url(../images/checkbox-checked.svg);
@@ -130,10 +115,12 @@
   padding: 12px 16px;
   letter-spacing: 0.01em;
   resize: none;
+
+  &::placeholder {
+    color: rgba(117, 117, 117, 0.5);
+  }
 }
-.modal-form__comment--area::placeholder {
-  color: rgba(117, 117, 117, 0.5);
-}
+
 .modal__button--submit {
   width: 200px;
   height: 50px;
@@ -150,8 +137,9 @@
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal__button--submit:hover,
-.modal__button--submit:focus {
-  background-color: #188ce8;
+
+  &:hover,
+  &:focus {
+    background-color: #188ce8;
+  }
 }
